# BacktestForecast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pytest-triage-log-2.txt  .pytest-triage-log.txt  README.md  alembic.ini  constraints.txt  docker-compose.monitoring.yml  docker-compose.prod.tls.yml  docker-compose.prod.yml  docker-compose.yml  openapi.snapshot.json  openapi.snapshot.json.new  package.json  pnpm-lock.yaml  pyproject.toml  repo_bootstrap.py  rotation-test-194361b3eda545aebf975114266f4bdd.sqlite  rotation-test-daefbc4d2c2f4839823d2056424053d7.sqlite  stocks-screener-04-12-2026.txt  tsconfig.base.json  weekly-options-over5-median80-mintrades70-monday-close-baseline.txt  weekly-options-over5-median80-mintrades70-monday-close-greedy21.txt  weekly-options-over5-median80-mintrades70-monday-close-greedy24.txt  weekly-options-over5-median80-mintrades70.txt  weekly-options-over5-minus-median80-mintrades70-part1.txt  weekly-options-over5-minus-median80-mintrades70-part2.txt  weekly-options-over5-minus-median80-mintrades70-part3.txt  weekly-options-over5-minus-median80-mintrades70-part4.txt  weekly-options-over5-minus-median80-mintrades70-part5.txt  weekly-options-over5-minus-median80-mintrades70.txt  weekly-options-over5.txt
.codex/tmp/: historical_sync_20260403_20260413.json
.codex_bench/: approx_progress_replay_availability_first_compare.json  approx_progress_replay_combined_shared_fetch_compare.json  approx_progress_replay_exact_cache_compare.json  approx_progress_replay_historical_prewarm_alignment_compare.json  approx_progress_replay_selector_cache_capacity_compare.json  approx_progress_replay_store_preferred_compare.json  first_long_straddle_profile_current.json  spy_2016_random_100_contract_fetch_profile.json  spy_2016_random_100_contract_fetch_profile_after_selector_cache_fix.json  spy_2016_random_100_contract_fetch_profile_build_only.json  spy_2016_random_100_profile_after_delta_lookup_fix.json  spy_2016_random_100_progress.jsonl  spy_2016_random_100_summary.json  spy_2016_random_100_summary_after_delta_lookup_fix.json  spy_2016_random_100_summary_after_selector_cache_fix.json
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  live-provider-nightly.yml  playwright.yml
alembic/: env.py
alembic/versions/: 20260309_0001_initial_backtest_vertical_slice.py  20260309_0002_add_trade_detail_json.py  20260309_0003_add_scanner_jobs_and_user_plan_tier.py  20260310_0004_add_billing_exports_and_audit.py  20260310_0005_async_backtest_runs.py  20260310_0006_add_backtest_templates.py  20260310_0007_add_nightly_pipeline.py  20260310_0008_add_symbol_analyses.py  20260311_0009_add_celery_task_id_scanner_export_audit_dedup.py  20260312_0010_add_composite_indexes_for_query_performance.py  20260312_0011_add_scanner_active_dedup_index.py  20260313_0012_add_financial_metrics.py  20260313_0013_add_export_job_started_at.py  20260313_0014_add_audit_event_null_dedup_index.py  20260313_0015_add_pipeline_status_created_index.py  20260313_0016_add_indexes_and_status_defaults.py  20260313_0017_add_check_constraints_and_cleanup_indexes.py  20260313_0017_add_check_constraints_and_unique.py  20260313_0017_add_check_constraints_and_unique_rank.py  20260313_0017_add_constraints_defaults_indexes.py  20260313_0018_rename_check_constraints.py  (+90 more)
apps/: __init__.py
backtestforecast/: __init__.py
docs/: CD_PIPELINE.md  CONCURRENCY.md  DASHBOARDS.md  METRICS.md  OPTION_CACHE.md  PAGINATION.md  PIPELINE.md  README.md  RUNBOOK.md  SLIPPAGE.md  SSE.md  TICKERS.md  audit-fix-tracking.md  audit-log.md  audit-remaining-items.md  audit-remaining-items2.md  backtest-strategy-assumptions.md  conventions.md  current-operational-assumptions.md  data-provider-outage-strategy.md  data-retention-policy.md  deployment-production.md  env-vars.md  error-codes.md  failure-mode-review.md  job-state-machines.md  known-limitations.md  launch-readiness-checklist.md  long-term-architecture.md  monitoring-alerting.md  recommended-next-10-product-improvements.md  refactor-plan-status.md  scanner-assumptions.md  schwab_trader_api.md  security-review-checklist.md  slippage.txt  support-orphaned-billing-cleanup.md  support-stuck-jobs.md  test-plan.md  workflow-trace.md
ops/: prometheus_alerts.yml
rust/backtest_kernels_pyo3/: Cargo.toml  pyproject.toml
rust/backtest_kernels_pyo3/src/: lib.rs
scripts/: _bootstrap.py  analyze_five_regime_confidence_abstention.py  api_smoke_workflows.py  audit_short_iv_gt_long_monday_quote_marks.py  backfill_earnings_events.py  backfill_ex_dividend_dates.py  backfill_underlying_bars_from_massive.py  backtest_fas_faz_weekly_calendar_policy.py  backtest_fas_weekly_bull_put_spreads.py  backtest_fas_weekly_calendar_policy.py  backtest_stock_rsi.py  backtest_stock_trend_filters.py  benchmark_backtest_kernels.py  benchmark_weekly_regime_models.py  build_backtest_kernels.ps1  build_backtest_kernels_pyo3.ps1  build_short_iv_gt_long_best_delta_recent_weeks.py  build_short_iv_gt_long_best_delta_selected_trades.py  build_short_iv_gt_long_best_delta_selected_trades_monday_close.py  build_short_iv_gt_long_best_delta_selected_trades_thursday_1_7_close.py  build_short_iv_gt_long_best_delta_selected_trades_thursday_close.py  build_short_iv_gt_long_best_delta_selected_trades_tuesday_2_9_close.py  build_short_iv_gt_long_best_delta_selected_trades_tuesday_close.py  build_short_iv_gt_long_best_delta_selected_trades_vix_down_gt20.py  build_short_iv_gt_long_best_delta_selected_trades_vix_up_gt20.py  build_short_iv_gt_long_best_delta_selected_trades_wednesday_1_8_close.py  build_short_iv_gt_long_best_delta_selected_trades_wednesday_close.py  check_contract_drift.py  check_duplicate_triggers.py  check_generated_artifact_hygiene.py  check_historical_data_freshness.py  check_locust_thresholds.py  check_massive_status.py  check_migration_defaults.py  check_migration_drift.py  check_migration_heads.sh  check_no_any_in_app_pages.py  check_openapi_drift.py  check_openapi_sync.sh  check_operational_docs.py  (+106 more)
tests/: conftest.py  postgres_support.py  test_error_types.py
(+939 files in other folders)
