[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backtestforecast"
version = "0.1.0"
description = "BacktestForecast.com monorepo Python application layer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "celery[redis]>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "PyJWT[crypto]>=2.10,<3.0",
  "structlog>=24.4,<25.0",
  "stripe>=11.0,<12.0",
  "reportlab>=4.2,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "ruff>=0.7,<1.0",
  "mypy>=1.13,<2.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
